fix safari fullscreen toggle icon weird stretch overflow

--- a/assets/css/default/style.scss
+++ b/assets/css/default/style.scss
@@ -359,6 +359,10 @@ html::after { content: "";
     }    
 }
 
+.fullscreenTg {
+    width: 24px !important;
+}
+
 // darkmode
 
 .content, .window { transition: color 0ms 500ms, background-color 200ms 500ms, border-color 200ms 500ms; }
